@@ -1,22 +1,19 @@
 package backend.service.model;
 
 import backend.repository.singleton.ItemRepository;
-import backend.service.model.builder.Item;
-import backend.service.model.builder.ItemFactory;
 
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public final class Inventory {
 
     private int capacity;
     private int maxCapacity;
     private boolean isInventory;
-    private final Map<String, Item> itens;
-    private List<Integer> itensAtivos;
+    private final Map<Integer, Item> itens;
+    private final List<Integer> itensAtivos;
 
     public Inventory(int capacity, int maxCapacity) {
         this.capacity = capacity;
@@ -26,8 +23,7 @@ public final class Inventory {
         this.itensAtivos = new ArrayList<>();
         ItemRepository.getInstance().getAll()
                 .stream().map(ItemFactory::create)
-                .forEach(item -> itens.put(item.getName(), item));
-        itens.get("chave").setVisible(true);
+                .forEach(item -> itens.put(item.getId(), item));
     }
 
     public int getCapacity() {
@@ -46,27 +42,21 @@ public final class Inventory {
         this.maxCapacity += updade;
     }
 
-    public Item getItem(String nameItem) {
-        return this.itens.get(nameItem);
+    public Item getItem(int id) {
+        return this.itens.get(id);
     }
 
     public void addItem(Item item) {
-        this.itens.put(item.getName(), item);
+        this.itens.put(item.getId(), item);
         this.updadeCapacity(item.getWeight());
     }
 
     public void removeItem(Item item) {
-        this.itens.remove(item.getName());
+        this.itens.remove(item.getId());
     }
 
-    public List<Item> getItemVisible() {
-        return this.itens.values().stream()
-                .filter(Item::isVisible)
-                .collect(Collectors.toList());
-    }
-
-    public void setItemInvisible(Item item) {
-        this.itens.put(item.getName(), item);
+    public List<Item> getItens() {
+        return this.itens.values().stream().toList();
     }
 
     public boolean isAtivo(Item item) {
@@ -79,12 +69,6 @@ public final class Inventory {
 
     public void removeItemAtivo(Item item) {
         this.itensAtivos.remove(item.getId());
-    }
-
-    public List<Item> getItemInvisible() {
-        return this.itens.values().stream()
-                .filter(Item::isInvisible)
-                .collect(Collectors.toList());
     }
 
     public boolean openInventory() {
